syntax = "proto3";

package ibc.applications.nft_transfer.v1;

option go_package = "github.com/initia-labs/initia/x/ibc/nft-transfer/types";

import "ibc/applications/nft_transfer/v1/types.proto";
import "gogoproto/gogo.proto";

// GenesisState defines the ibc nft-transfer genesis state
message GenesisState {
  string              port_id      = 1 [(gogoproto.moretags) = "yaml:\"port_id\""];
  repeated ClassTrace class_traces = 2 [
    (gogoproto.castrepeated) = "Traces",
    (gogoproto.nullable)     = false,
    (gogoproto.moretags)     = "yaml:\"class_traces\""
  ];
  repeated ClassData class_data = 3 [(gogoproto.nullable) = false, (gogoproto.moretags) = "yaml:\"class_data\""];
  repeated TokenData token_data = 4 [(gogoproto.nullable) = false, (gogoproto.moretags) = "yaml:\"token_data\""];

  Params params = 5 [(gogoproto.nullable) = false];
}

// ClassData contains the class trace hash and the class data
// for genesis.
message ClassData {
  bytes  trace_hash = 1;
  string data       = 2;
}

// TokenData contains the trace hash, token id, and the token data
// for genesis.
message TokenData {
  bytes  trace_hash = 1;
  string token_id   = 2;
  string data       = 3;
}